Name:                chaos2010
Version:             0.0
Description:         turn based game with wizards and goblins
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatblog@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.2

extra-source-files:  README,
                     LICENSE,
                     docs/playing_guide

Flag tests
  Description:       Build the tests executable.
  Default:           False


Executable chaos2010
  Main-is:           Chaos2010.lhs
  Build-Depends:     base >= 4 && < 5,
                     deepseq,
                     strict-concurrency,
                     gtk,
                     haskelldb >= 1.0 && <= 1.1,
                     HDBC,
                     HDBC-postgresql,
                     haskelldb-hdbc-postgresql,
                     uniplate,
                     template-haskell,
                     HUnit,
                     old-time,
                     FileManip,
                     filepath,
                     SDL-image,
                     SDL-gfx,
                     SDL

  Buildable:         True

  Other-Modules:     Games.Chaos2010.Utils
                     Games.Chaos2010.UI.NewGameWidget
                     Games.Chaos2010.UI.ActionHistoryWidget
                     Games.Chaos2010.UI.BoardWidget
                     Games.Chaos2010.UI.SpellBookWidget
                     Games.Chaos2010.UI.InfoWidget
                     Games.Chaos2010.UI.ChaosUI
                     Games.Chaos2010.UI.UITypes
                     Games.Chaos2010.HaskellDBUtils
                     Games.Chaos2010.ConcreteUI.CUI
                     Games.Chaos2010.ConcreteUI.SDL.BoardWindow
                     Games.Chaos2010.ConcreteUI.SDL.SDLGui
                     Games.Chaos2010.ConcreteUI.Gtk.GtkUtils
                     Games.Chaos2010.ConcreteUI.Gtk.GtkGUI
                     Games.Chaos2010.ConcreteUI.Gtk.Types
                     Games.Chaos2010.ConcreteUI.Gtk.TextWidget
                     Games.Chaos2010.Database.Attacking_prototypes
                     Games.Chaos2010.Database.Pieces
                     Games.Chaos2010.Database.Cast_alignment_table
                     Games.Chaos2010.Database.Next_wizard
                     Games.Chaos2010.Database.Pieces_on_top
                     Games.Chaos2010.Database.Spell_valid_squares
                     Games.Chaos2010.Database.Crimes_against_nature
                     Games.Chaos2010.Database.Turn_number_table
                     Games.Chaos2010.Database.Spell_cast_chance
                     Games.Chaos2010.Database.Attacking_pieces
                     Games.Chaos2010.Database.Ai_useful_spells
                     Games.Chaos2010.Database.Base_relvar_keys
                     Games.Chaos2010.Database.Game_completed_table
                     Games.Chaos2010.Database.Cursor_piece_details
                     Games.Chaos2010.Database.Creature_pieces
                     Games.Chaos2010.Database.Closest_enemy_to_selected_piece
                     Games.Chaos2010.Database.Action_history_num_wiz
                     Games.Chaos2010.Database.All_module_objects
                     Games.Chaos2010.Database.Selected_piece_adjacent_attacking_squares
                     Games.Chaos2010.Database.Colours
                     Games.Chaos2010.Database.Magic_attackable_pieces
                     Games.Chaos2010.Database.Prefered_targets
                     Games.Chaos2010.Database.Ranged_weapon_pieces
                     Games.Chaos2010.Database.Selected_piece_move_squares
                     Games.Chaos2010.Database.Init_wizard_display_info_argument
                     Games.Chaos2010.Database.Public_database_objects
                     Games.Chaos2010.Database.Current_wizard
                     Games.Chaos2010.Database.Action_new_game_argument
                     Games.Chaos2010.Database.Spells_mr
                     Games.Chaos2010.Database.Section_orderv
                     Games.Chaos2010.Database.Action_client_new_game_argument
                     Games.Chaos2010.Database.Cast_success_checked_table
                     Games.Chaos2010.Database.Object_piece_types
                     Games.Chaos2010.Database.New_game_widget_state
                     Games.Chaos2010.Database.Action_history_spell
                     Games.Chaos2010.Database.View_attributes
                     Games.Chaos2010.Database.Wizard_spell_choices_mr
                     Games.Chaos2010.Database.Selected_piece
                     Games.Chaos2010.Database.Database_constraints
                     Games.Chaos2010.Database.Wizard_display_info
                     Games.Chaos2010.Database.System_implementation_objects
                     Games.Chaos2010.Database.All_database_objects
                     Games.Chaos2010.Database.Magic_attackable_prototypes
                     Games.Chaos2010.Database.Piece_sprite
                     Games.Chaos2010.Database.Spell_colours
                     Games.Chaos2010.Database.Spell_book_show_all_table
                     Games.Chaos2010.Database.Ai_filtered_target_spells
                     Games.Chaos2010.Database.Spell_sprites
                     Games.Chaos2010.Database.Current_wizard_table
                     Games.Chaos2010.Database.Client_new_game_t
                     Games.Chaos2010.Database.Selected_piece_attackable_squares
                     Games.Chaos2010.Database.Live_wizards
                     Games.Chaos2010.Database.Spells_mr_base
                     Games.Chaos2010.Database.Target_spells
                     Games.Chaos2010.Database.Action_history_source
                     Games.Chaos2010.Database.In_next_phase_hack_table
                     Games.Chaos2010.Database.Action_history_piece
                     Games.Chaos2010.Database.Action_history_mr_base
                     Games.Chaos2010.Database.Base_relvar_metadata
                     Games.Chaos2010.Database.Turn_phase_table
                     Games.Chaos2010.Database.Key_control_settings
                     Games.Chaos2010.Database.Spells_with_order
                     Games.Chaos2010.Database.Disable_spreading_table
                     Games.Chaos2010.Database.Spell_choice_hack_table
                     Games.Chaos2010.Database.Spell_details
                     Games.Chaos2010.Database.Scalars
                     Games.Chaos2010.Database.Action_history_colour_mr
                     Games.Chaos2010.Database.Pieces_on_top_view
                     Games.Chaos2010.Database.Piece_starting_ticks
                     Games.Chaos2010.Database.Imaginary_pieces
                     Games.Chaos2010.Database.Fields
                     Games.Chaos2010.Database.Operator_source
                     Games.Chaos2010.Database.Creature_prototypes
                     Games.Chaos2010.Database.Piece_prototypes_mr
                     Games.Chaos2010.Database.Wizard_sprites
                     Games.Chaos2010.Database.Cast_magic_wood_available_squares
                     Games.Chaos2010.Database.Selectable_pieces
                     Games.Chaos2010.Database.Client_valid_activate_actions
                     Games.Chaos2010.Database.Selected_piece_details
                     Games.Chaos2010.Database.Action_history_allegiance
                     Games.Chaos2010.Database.Allegiance_colours
                     Games.Chaos2010.Database.Current_wizard_spell_squares
                     Games.Chaos2010.Database.Action_history_piece_source
                     Games.Chaos2010.Database.Spell_indexes_no_dis_turm
                     Games.Chaos2010.Database.Pieces_with_priorities
                     Games.Chaos2010.Database.Current_wizard_spell
                     Games.Chaos2010.Database.Enterable_piece_types
                     Games.Chaos2010.Database.Dont_nest_ai_next_phase_table
                     Games.Chaos2010.Database.Current_wizard_square
                     Games.Chaos2010.Database.Creating_new_game_table
                     Games.Chaos2010.Database.Valid_target_actions
                     Games.Chaos2010.Database.Prompt
                     Games.Chaos2010.Database.Operators
                     Games.Chaos2010.Database.Spell_book_table
                     Games.Chaos2010.Database.Action_instructions
                     Games.Chaos2010.Database.Modules
                     Games.Chaos2010.Database.Client_valid_target_actions
                     Games.Chaos2010.Database.Activate_spells
                     Games.Chaos2010.Database.Ai_selected_piece_actions
                     Games.Chaos2010.Database.Views
                     Games.Chaos2010.Database.Allegiances
                     Games.Chaos2010.Database.Sprites
                     Games.Chaos2010.Database.Adjacent_to_new_tree_squares
                     Games.Chaos2010.Database.Cast_magic_wood_squares
                     Games.Chaos2010.Database.Dead_monster_pieces
                     Games.Chaos2010.Database.Action_history_turn_num
                     Games.Chaos2010.Database.Object_orders
                     Games.Chaos2010.Database.Action_history_target
                     Games.Chaos2010.Database.Squares_valid_categories
                     Games.Chaos2010.Database.Base_relvar_attributes
                     Games.Chaos2010.Database.Board_size
                     Games.Chaos2010.Database.Board_highlights
                     Games.Chaos2010.Database.Action_history_piece_target
                     Games.Chaos2010.Database.Range_attacking_prototypes
                     Games.Chaos2010.Database.Select_best_move
                     Games.Chaos2010.Database.Spell_books
                     Games.Chaos2010.Database.Monster_prototypes
                     Games.Chaos2010.Database.Pieces_moved
                     Games.Chaos2010.Database.Monster_pieces
                     Games.Chaos2010.Database.Action_history_spell_source
                     Games.Chaos2010.Database.Spreadable_squares
                     Games.Chaos2010.Database.Action_history_turn_phase
                     Games.Chaos2010.Database.Piece_prototypes_mr_base
                     Games.Chaos2010.Database.Attackable_prototypes
                     Games.Chaos2010.Database.Triggers
                     Games.Chaos2010.Database.Current_wizard_spell_counts
                     Games.Chaos2010.Database.Board_sprites1_view
                     Games.Chaos2010.Database.Action_history_mr
                     Games.Chaos2010.Database.Spell_parts_to_cast_table
                     Games.Chaos2010.Database.Base_relvars
                     Games.Chaos2010.Database.Spell_keys
                     Games.Chaos2010.Database.Action_history_spell_target
                     Games.Chaos2010.Database.Ridable_prototypes
                     Games.Chaos2010.Database.Base_relvar_key_attributes
                     Games.Chaos2010.Database.Remaining_walk_table
                     Games.Chaos2010.Database.Wizard_spell_choices_imaginary
                     Games.Chaos2010.Database.Attackable_pieces
                     Games.Chaos2010.Database.Wizard_starting_positions
                     Games.Chaos2010.Database.Pieces_mr
                     Games.Chaos2010.Database.Wizards
                     Games.Chaos2010.Database.Wizard_spell_choices_mr_base
                     Games.Chaos2010.Database.World_alignment_table
                     Games.Chaos2010.Database.Current_wizard_target_spells
                     Games.Chaos2010.Database.Monster_spells
                     Games.Chaos2010.Database.Wizard_spell_choices
                     Games.Chaos2010.Database.Valid_activate_actions
                     Games.Chaos2010.Database.Summon_spells
                     Games.Chaos2010.Database.Current_wizard_selected_spell_details
                     Games.Chaos2010.Database.Remaining_walk_hack_table
                     Games.Chaos2010.Database.Test_action_overrides
                     Games.Chaos2010.Database.Wizards_in_trees
                     Games.Chaos2010.Database.Castable_target_spells
                     Games.Chaos2010.Database.Wizard_upgrade_stats
                     Games.Chaos2010.Database.Board_ranges
                     Games.Chaos2010.Database.Selected_piece_move_squares_2
                     Games.Chaos2010.Database.Piece_details
                     Games.Chaos2010.Database.Cursor_position
                     Games.Chaos2010.Tests.BoardUtils
                     Games.Chaos2010.Tests.Casting
                     Games.Chaos2010.Tests.SetupGameState
                     Games.Chaos2010.Tests.AllTests
                     Games.Chaos2010.Tests.Upgrades
                     Games.Chaos2010.Tests.Basics
                     Games.Chaos2010.Tests.MoveMisc
                     Games.Chaos2010.Tests.Complete
                     Games.Chaos2010.Tests.Autonomous
                     Games.Chaos2010.Tests.TestUtils
                     Games.Chaos2010.Tests.TableValueTypes
                     Games.Chaos2010.Tests.RelationalAlgebra
                     Games.Chaos2010.Tests.Subphases
                     Games.Chaos2010.Tests.Phases
                     Games.Chaos2010.Tests.SquaresValid
                     Games.Chaos2010.Database
                     Games.Chaos2010.ThHdb
                     Games.Chaos2010.DBUpdates

Executable tests
   Main-is:          Tests.lhs
   Build-Depends:    base >= 4 && < 5,
                     haskelldb >= 1.0 && <= 1.1,
                     HDBC,
                     HDBC-postgresql,
                     haskelldb-hdbc-postgresql

   if flag(tests)
     Buildable:      True
   else
     Buildable:      False
  Other-Modules:     Games.Chaos2010.Utils
                     Games.Chaos2010.UI.NewGameWidget
                     Games.Chaos2010.UI.ActionHistoryWidget
                     Games.Chaos2010.UI.BoardWidget
                     Games.Chaos2010.UI.SpellBookWidget
                     Games.Chaos2010.UI.InfoWidget
                     Games.Chaos2010.UI.ChaosUI
                     Games.Chaos2010.UI.UITypes
                     Games.Chaos2010.HaskellDBUtils
                     Games.Chaos2010.ConcreteUI.CUI
                     Games.Chaos2010.ConcreteUI.SDL.BoardWindow
                     Games.Chaos2010.ConcreteUI.SDL.SDLGui
                     Games.Chaos2010.ConcreteUI.Gtk.GtkUtils
                     Games.Chaos2010.ConcreteUI.Gtk.GtkGUI
                     Games.Chaos2010.ConcreteUI.Gtk.Types
                     Games.Chaos2010.ConcreteUI.Gtk.TextWidget
                     Games.Chaos2010.Database.Attacking_prototypes
                     Games.Chaos2010.Database.Pieces
                     Games.Chaos2010.Database.Cast_alignment_table
                     Games.Chaos2010.Database.Next_wizard
                     Games.Chaos2010.Database.Pieces_on_top
                     Games.Chaos2010.Database.Spell_valid_squares
                     Games.Chaos2010.Database.Crimes_against_nature
                     Games.Chaos2010.Database.Turn_number_table
                     Games.Chaos2010.Database.Spell_cast_chance
                     Games.Chaos2010.Database.Attacking_pieces
                     Games.Chaos2010.Database.Ai_useful_spells
                     Games.Chaos2010.Database.Base_relvar_keys
                     Games.Chaos2010.Database.Game_completed_table
                     Games.Chaos2010.Database.Cursor_piece_details
                     Games.Chaos2010.Database.Creature_pieces
                     Games.Chaos2010.Database.Closest_enemy_to_selected_piece
                     Games.Chaos2010.Database.Action_history_num_wiz
                     Games.Chaos2010.Database.All_module_objects
                     Games.Chaos2010.Database.Selected_piece_adjacent_attacking_squares
                     Games.Chaos2010.Database.Colours
                     Games.Chaos2010.Database.Magic_attackable_pieces
                     Games.Chaos2010.Database.Prefered_targets
                     Games.Chaos2010.Database.Ranged_weapon_pieces
                     Games.Chaos2010.Database.Selected_piece_move_squares
                     Games.Chaos2010.Database.Init_wizard_display_info_argument
                     Games.Chaos2010.Database.Public_database_objects
                     Games.Chaos2010.Database.Current_wizard
                     Games.Chaos2010.Database.Action_new_game_argument
                     Games.Chaos2010.Database.Spells_mr
                     Games.Chaos2010.Database.Section_orderv
                     Games.Chaos2010.Database.Action_client_new_game_argument
                     Games.Chaos2010.Database.Cast_success_checked_table
                     Games.Chaos2010.Database.Object_piece_types
                     Games.Chaos2010.Database.New_game_widget_state
                     Games.Chaos2010.Database.Action_history_spell
                     Games.Chaos2010.Database.View_attributes
                     Games.Chaos2010.Database.Wizard_spell_choices_mr
                     Games.Chaos2010.Database.Selected_piece
                     Games.Chaos2010.Database.Database_constraints
                     Games.Chaos2010.Database.Wizard_display_info
                     Games.Chaos2010.Database.System_implementation_objects
                     Games.Chaos2010.Database.All_database_objects
                     Games.Chaos2010.Database.Magic_attackable_prototypes
                     Games.Chaos2010.Database.Piece_sprite
                     Games.Chaos2010.Database.Spell_colours
                     Games.Chaos2010.Database.Spell_book_show_all_table
                     Games.Chaos2010.Database.Ai_filtered_target_spells
                     Games.Chaos2010.Database.Spell_sprites
                     Games.Chaos2010.Database.Current_wizard_table
                     Games.Chaos2010.Database.Client_new_game_t
                     Games.Chaos2010.Database.Selected_piece_attackable_squares
                     Games.Chaos2010.Database.Live_wizards
                     Games.Chaos2010.Database.Spells_mr_base
                     Games.Chaos2010.Database.Target_spells
                     Games.Chaos2010.Database.Action_history_source
                     Games.Chaos2010.Database.In_next_phase_hack_table
                     Games.Chaos2010.Database.Action_history_piece
                     Games.Chaos2010.Database.Action_history_mr_base
                     Games.Chaos2010.Database.Base_relvar_metadata
                     Games.Chaos2010.Database.Turn_phase_table
                     Games.Chaos2010.Database.Key_control_settings
                     Games.Chaos2010.Database.Spells_with_order
                     Games.Chaos2010.Database.Disable_spreading_table
                     Games.Chaos2010.Database.Spell_choice_hack_table
                     Games.Chaos2010.Database.Spell_details
                     Games.Chaos2010.Database.Scalars
                     Games.Chaos2010.Database.Action_history_colour_mr
                     Games.Chaos2010.Database.Pieces_on_top_view
                     Games.Chaos2010.Database.Piece_starting_ticks
                     Games.Chaos2010.Database.Imaginary_pieces
                     Games.Chaos2010.Database.Fields
                     Games.Chaos2010.Database.Operator_source
                     Games.Chaos2010.Database.Creature_prototypes
                     Games.Chaos2010.Database.Piece_prototypes_mr
                     Games.Chaos2010.Database.Wizard_sprites
                     Games.Chaos2010.Database.Cast_magic_wood_available_squares
                     Games.Chaos2010.Database.Selectable_pieces
                     Games.Chaos2010.Database.Client_valid_activate_actions
                     Games.Chaos2010.Database.Selected_piece_details
                     Games.Chaos2010.Database.Action_history_allegiance
                     Games.Chaos2010.Database.Allegiance_colours
                     Games.Chaos2010.Database.Current_wizard_spell_squares
                     Games.Chaos2010.Database.Action_history_piece_source
                     Games.Chaos2010.Database.Spell_indexes_no_dis_turm
                     Games.Chaos2010.Database.Pieces_with_priorities
                     Games.Chaos2010.Database.Current_wizard_spell
                     Games.Chaos2010.Database.Enterable_piece_types
                     Games.Chaos2010.Database.Dont_nest_ai_next_phase_table
                     Games.Chaos2010.Database.Current_wizard_square
                     Games.Chaos2010.Database.Creating_new_game_table
                     Games.Chaos2010.Database.Valid_target_actions
                     Games.Chaos2010.Database.Prompt
                     Games.Chaos2010.Database.Operators
                     Games.Chaos2010.Database.Spell_book_table
                     Games.Chaos2010.Database.Action_instructions
                     Games.Chaos2010.Database.Modules
                     Games.Chaos2010.Database.Client_valid_target_actions
                     Games.Chaos2010.Database.Activate_spells
                     Games.Chaos2010.Database.Ai_selected_piece_actions
                     Games.Chaos2010.Database.Views
                     Games.Chaos2010.Database.Allegiances
                     Games.Chaos2010.Database.Sprites
                     Games.Chaos2010.Database.Adjacent_to_new_tree_squares
                     Games.Chaos2010.Database.Cast_magic_wood_squares
                     Games.Chaos2010.Database.Dead_monster_pieces
                     Games.Chaos2010.Database.Action_history_turn_num
                     Games.Chaos2010.Database.Object_orders
                     Games.Chaos2010.Database.Action_history_target
                     Games.Chaos2010.Database.Squares_valid_categories
                     Games.Chaos2010.Database.Base_relvar_attributes
                     Games.Chaos2010.Database.Board_size
                     Games.Chaos2010.Database.Board_highlights
                     Games.Chaos2010.Database.Action_history_piece_target
                     Games.Chaos2010.Database.Range_attacking_prototypes
                     Games.Chaos2010.Database.Select_best_move
                     Games.Chaos2010.Database.Spell_books
                     Games.Chaos2010.Database.Monster_prototypes
                     Games.Chaos2010.Database.Pieces_moved
                     Games.Chaos2010.Database.Monster_pieces
                     Games.Chaos2010.Database.Action_history_spell_source
                     Games.Chaos2010.Database.Spreadable_squares
                     Games.Chaos2010.Database.Action_history_turn_phase
                     Games.Chaos2010.Database.Piece_prototypes_mr_base
                     Games.Chaos2010.Database.Attackable_prototypes
                     Games.Chaos2010.Database.Triggers
                     Games.Chaos2010.Database.Current_wizard_spell_counts
                     Games.Chaos2010.Database.Board_sprites1_view
                     Games.Chaos2010.Database.Action_history_mr
                     Games.Chaos2010.Database.Spell_parts_to_cast_table
                     Games.Chaos2010.Database.Base_relvars
                     Games.Chaos2010.Database.Spell_keys
                     Games.Chaos2010.Database.Action_history_spell_target
                     Games.Chaos2010.Database.Ridable_prototypes
                     Games.Chaos2010.Database.Base_relvar_key_attributes
                     Games.Chaos2010.Database.Remaining_walk_table
                     Games.Chaos2010.Database.Wizard_spell_choices_imaginary
                     Games.Chaos2010.Database.Attackable_pieces
                     Games.Chaos2010.Database.Wizard_starting_positions
                     Games.Chaos2010.Database.Pieces_mr
                     Games.Chaos2010.Database.Wizards
                     Games.Chaos2010.Database.Wizard_spell_choices_mr_base
                     Games.Chaos2010.Database.World_alignment_table
                     Games.Chaos2010.Database.Current_wizard_target_spells
                     Games.Chaos2010.Database.Monster_spells
                     Games.Chaos2010.Database.Wizard_spell_choices
                     Games.Chaos2010.Database.Valid_activate_actions
                     Games.Chaos2010.Database.Summon_spells
                     Games.Chaos2010.Database.Current_wizard_selected_spell_details
                     Games.Chaos2010.Database.Remaining_walk_hack_table
                     Games.Chaos2010.Database.Test_action_overrides
                     Games.Chaos2010.Database.Wizards_in_trees
                     Games.Chaos2010.Database.Castable_target_spells
                     Games.Chaos2010.Database.Wizard_upgrade_stats
                     Games.Chaos2010.Database.Board_ranges
                     Games.Chaos2010.Database.Selected_piece_move_squares_2
                     Games.Chaos2010.Database.Piece_details
                     Games.Chaos2010.Database.Cursor_position
                     Games.Chaos2010.Tests.BoardUtils
                     Games.Chaos2010.Tests.Casting
                     Games.Chaos2010.Tests.SetupGameState
                     Games.Chaos2010.Tests.AllTests
                     Games.Chaos2010.Tests.Upgrades
                     Games.Chaos2010.Tests.Basics
                     Games.Chaos2010.Tests.MoveMisc
                     Games.Chaos2010.Tests.Complete
                     Games.Chaos2010.Tests.Autonomous
                     Games.Chaos2010.Tests.TestUtils
                     Games.Chaos2010.Tests.TableValueTypes
                     Games.Chaos2010.Tests.RelationalAlgebra
                     Games.Chaos2010.Tests.Subphases
                     Games.Chaos2010.Tests.Phases
                     Games.Chaos2010.Tests.SquaresValid
                     Games.Chaos2010.Database
                     Games.Chaos2010.ThHdb
                     Games.Chaos2010.DBUpdates
